/** Common type definitions */
namespace java com.krowd9.api.common
#@namespace scala com.krowd9.api.common

/** External User ID */
typedef string ExternalUserId

/** Yakatak UserId */
typedef i64 UserId

exception UserNotFoundException {
}
